# Examples_Paterns

./: CMakeLists.txt
AbsractFactory/: CMakeLists.txt  main.cpp
Adapter/: CMakeLists.txt  main.cpp
Bridge/: CMakeLists.txt  main.cpp
Builder/: CMakeLists.txt  main.cpp
FactoryMethod/: CMakeLists.txt  main.cpp
Prototype/: CMakeLists.txt  main.cpp
Singleton/: CMakeLists.txt  main.cpp
